overflow fix

--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -35,5 +35,5 @@ a {
   
 .navbar__links-login {
     position: relative;
-    left: 38rem;
+    right: 0;
 }
