--- a/src/components/project-detail/projectdetail.css
+++ b/src/components/project-detail/projectdetail.css
@@ -1,6 +1,4 @@
-*{
-    overflow: hidden;
-}
+
 .project-detail-container {
     position: relative;
     width: 60%;
